SalesforceCode/objects/EventAttribute__c.object
<CustomObject>
    <description>Stores a key-value pair containing data about a Salsalytics Event</description>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentEvent__c</fullName>
        <label>ParentEvent</label>
        <referenceTo>Event__c</referenceTo>
        <relationshipLabel>EventAttributes</relationshipLabel>
        <relationshipName>EventAttributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EventAttribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Key__c</columns>
        <columns>Value__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EventAttribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EventAttributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>